--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#about">About</a>
+            <a class="nav-link js-scroll-trigger" href="#about">Persönliche Daten</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
+            <a class="nav-link js-scroll-trigger" href="#experience">Beruflicher Werdegang</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#education">Education</a>
@@ -66,22 +66,23 @@
           <h1 class="mb-0">Irina
             <span class="text-primary">Terribilini</span>
           </h1>
-          <div class="subheading mb-5">Fährstrasse 40· 4632 Trimbach · +41 79 690 93 79 ·
+          <div class="subheading mb-5">Fährstrasse 40· 4632 Trimbach · 079 690 93 79 ·
             <a href="mailto:irina_terribilini@hotmail.com">irina_terribilini@hotmail.com</a>
           </div>
-          <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+          <p class="lead mb-5">
+
+            <il>Geboren: 3.8.1993</il><br>
+            <il>Heimatort: Vergeletto TI</il><br>
+            <il>Nationalität: Schweizerin</il><br>
+            <il>Familienstand: ledig</il>
+
+          </p>
           <div class="social-icons">
-            <a href="#">
+            <a href="https://www.linkedin.com/in/irina-terribilini-723419123/">
               <i class="fab fa-linkedin-in"></i>
             </a>
-            <a href="#">
-              <i class="fab fa-github"></i>
-            </a>
-            <a href="#">
-              <i class="fab fa-twitter"></i>
-            </a>
-            <a href="#">
-              <i class="fab fa-facebook-f"></i>
+            <a href="https://join.skype.com/invite/guseX6EsrXr5">
+              <i class="fab fa-skype"></i>
             </a>
           </div>
         </div>
@@ -91,7 +92,7 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="experience">
         <div class="my-auto">
-          <h2 class="mb-5">Experience</h2>
+          <h2 class="mb-5">Beruflicher Werdegang</h2>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
