--- a/index.html
+++ b/index.html
@@ -55,9 +55,6 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#interests">Interessen</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#awards">Diplome & Zertifkate</a>
-          </li>
         </ul>
       </div>
     </nav>
@@ -99,48 +96,36 @@
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Senior Web Developer</h3>
-              <div class="subheading mb-3">Intelitec Solutions</div>
+              <h3 class="mb-0">Projektassistentin 60%</h3>
+              <div class="subheading mb-3">Migros-Genossenschafts-Bund Zürich</div>
               <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">March 2013 - Present</span>
+              <span class="text-primary">April 2018 - November 2018</span>
             </div>
           </div>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Web Developer</h3>
-              <div class="subheading mb-3">Intelitec Solutions</div>
+              <h3 class="mb-0">Kaufmännische Mitarbeiterin 40%</h3>
+              <div class="subheading mb-3">Bürokonzept Schaller AG, Lenzburg</div>
               <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">December 2011 - March 2013</span>
+              <span class="text-primary">März 2015 - März 2018</span>
             </div>
           </div>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Junior Web Designer</h3>
-              <div class="subheading mb-3">Shout! Media Productions</div>
+              <h3 class="mb-0">Kaufmännische Mitarbeiterin Unternehmenskommunikation 100%</h3>
+              <div class="subheading mb-3">Asana Gruppe AG Spital Menziken</div>
               <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">July 2010 - December 2011</span>
+              <span class="text-primary">August 2012 - Januar 2015</span>
             </div>
           </div>
-
-          <div class="resume-item d-flex flex-column flex-md-row">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0">Web Design Intern</h3>
-              <div class="subheading mb-3">Shout! Media Productions</div>
-              <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">September 2008 - June 2010</span>
-            </div>
-          </div>
-
         </div>
 
       </section>
@@ -149,28 +134,37 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="education">
         <div class="my-auto">
-          <h2 class="mb-5">Education</h2>
+          <h2 class="mb-5">Ausbildung</h2>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">University of Colorado Boulder</h3>
-              <div class="subheading mb-3">Bachelor of Science</div>
-              <div>Computer Science - Web Development Track</div>
-              <p>GPA: 3.23</p>
+              <h3 class="mb-0">BSc Informatik - Profilierung iCompetence</h3>
+              <div class="subheading mb-3">Hochschule für Technik FHNW Brugg-Windisch</div>
+              <div>Bachelor of Science FHNW in Informatik mit Vertiefung in Design und Management</div>
+              <a href="https://www.fhnw.ch/de/studium/technik/icompetence">Zur Webseite der FHNW</a>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">August 2006 - May 2010</span>
+              <span class="text-primary">September 2014 - September 2018</span>
             </div>
           </div>
 
           <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">James Buchanan High School</h3>
-              <div class="subheading mb-3">Technology Magnet Program</div>
-              <p>GPA: 3.56</p>
+              <h3 class="mb-0">Kaufmännische Lehre mit Berufsmaturität</h3>
+              <div class="subheading mb-3">Asana Gruppe AG Spital Menziken</div>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">August 2002 - May 2006</span>
+              <span class="text-primary">August 2009 - August 2012</span>
+            </div>
+          </div>
+
+          <div class="resume-item d-flex flex-column flex-md-row">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Primar- und Bezirksschule</h3>
+              <div class="subheading mb-3">Gontenschwil, Brunssum NL, Unterkulm</div>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">August 2000 - August 2009</span>
             </div>
           </div>
 
@@ -183,7 +177,7 @@
         <div class="my-auto">
           <h2 class="mb-5">Skills</h2>
 
-          <div class="subheading mb-3">Programming Languages &amp; Tools</div>
+          <div class="subheading mb-3">Programmiersprachen</div>
           <ul class="list-inline dev-icons">
             <li class="list-inline-item">
               <i class="fab fa-html5"></i>
@@ -194,49 +188,70 @@
             <li class="list-inline-item">
               <i class="fab fa-js-square"></i>
             </li>
-            <li class="list-inline-item">
-              <i class="fab fa-angular"></i>
-            </li>
+            <!--<li class="list-inline-item">-->
+              <!--<i class="fab fa-angular"></i>-->
+            <!--</li>-->
             <li class="list-inline-item">
               <i class="fab fa-react"></i>
             </li>
             <li class="list-inline-item">
-              <i class="fab fa-node-js"></i>
+              <i class="fab fa-java"></i>
             </li>
-            <li class="list-inline-item">
-              <i class="fab fa-sass"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="fab fa-less"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="fab fa-wordpress"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="fab fa-gulp"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="fab fa-grunt"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="fab fa-npm"></i>
-            </li>
+            <!--<li class="list-inline-item">-->
+              <!--<i class="fab fa-node-js"></i>-->
+            <!--</li>-->
+            <!--<li class="list-inline-item">-->
+              <!--<i class="fab fa-sass"></i>-->
+            <!--</li>-->
+            <!--<li class="list-inline-item">-->
+              <!--<i class="fab fa-less"></i>-->
+            <!--</li>-->
+            <!--<li class="list-inline-item">-->
+              <!--<i class="fab fa-wordpress"></i>-->
+            <!--</li>-->
+            <!--<li class="list-inline-item">-->
+              <!--<i class="fab fa-gulp"></i>-->
+            <!--</li>-->
+            <!--<li class="list-inline-item">-->
+              <!--<i class="fab fa-grunt"></i>-->
+            <!--</li>-->
+            <!--<li class="list-inline-item">-->
+              <!--<i class="fab fa-npm"></i>-->
+            <!--</li>-->
           </ul>
 
-          <div class="subheading mb-3">Workflow</div>
+          <div class="subheading mb-3">Kenntnisse</div>
           <ul class="fa-ul mb-0">
             <li>
               <i class="fa-li fa fa-check"></i>
-              Mobile-First, Responsive Design</li>
+              User Interface Design</li>
             <li>
               <i class="fa-li fa fa-check"></i>
-              Cross Browser Testing &amp; Debugging</li>
+              User Experience Design</li>
             <li>
               <i class="fa-li fa fa-check"></i>
-              Cross Functional Teams</li>
+              Usability Testing</li>
             <li>
               <i class="fa-li fa fa-check"></i>
-              Agile Development &amp; Scrum</li>
+              MySQL</li>
+            <li>
+              <i class="fa-li fa fa-check"></i>
+              Adobe Programme (InDesign, Photoshop, Illustrator)</li>
+            <li>
+          </ul>
+<br>
+          <div class="subheading mb-3">Kurse & Diplome</div>
+          <ul class="fa-ul mb-0">
+            <li>
+              <i class="fa-li fa fa-check"></i>
+              ITIL® V3 Foundation Certificate</li>
+            <li>
+              <i class="fa-li fa fa-check"></i>
+              Berufsbildnerkurs</li>
+            <li>
+              <i class="fa-li fa fa-check"></i>
+              Fotografie Grund- und Aufbaukurs</li>
+            <li>
           </ul>
         </div>
       </section>
@@ -247,60 +262,19 @@
         <div class="my-auto">
           <h2 class="mb-5">Sprachen</h2>
 
-          <div class="subheading mb-3">Programming Languages &amp; Tools</div>
-          <ul class="list-inline dev-icons">
-            <li class="list-inline-item">
-              <i class="fab fa-html5"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="fab fa-css3-alt"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="fab fa-js-square"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="fab fa-angular"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="fab fa-react"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="fab fa-node-js"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="fab fa-sass"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="fab fa-less"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="fab fa-wordpress"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="fab fa-gulp"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="fab fa-grunt"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="fab fa-npm"></i>
-            </li>
-          </ul>
-
-          <div class="subheading mb-3">Workflow</div>
           <ul class="fa-ul mb-0">
             <li>
               <i class="fa-li fa fa-check"></i>
-              Mobile-First, Responsive Design</li>
+              Deutsch: Muttersprache</li>
             <li>
               <i class="fa-li fa fa-check"></i>
-              Cross Browser Testing &amp; Debugging</li>
+              Englisch: konversationssicher</li>
             <li>
               <i class="fa-li fa fa-check"></i>
-              Cross Functional Teams</li>
+              Französisch: Grundkenntnisse</li>
             <li>
               <i class="fa-li fa fa-check"></i>
-              Agile Development &amp; Scrum</li>
+              Italienisch: Grundkenntnisse</li>
           </ul>
         </div>
       </section>
@@ -309,44 +283,23 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
         <div class="my-auto">
-          <h2 class="mb-5">Interests</h2>
-          <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-          <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
-        </div>
-      </section>
-
-      <hr class="m-0">
-
-      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="awards">
-        <div class="my-auto">
-          <h2 class="mb-5">Awards &amp; Certifications</h2>
+          <h2 class="mb-5">Interessen</h2>
           <ul class="fa-ul mb-0">
             <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              Google Analytics Certified Developer</li>
+              <i class="fa-li fa fa-check"></i>
+              Volleyball</li>
             <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              Mobile Web Specialist - Google Certification</li>
+              <i class="fa-li fa fa-check"></i>
+             Pole Fitness</li>
             <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              1<sup>st</sup>
-              Place - University of Colorado Boulder - Emerging Tech Competition 2009</li>
+              <i class="fa-li fa fa-check"></i>
+              Wintersport</li>
             <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              1<sup>st</sup>
-              Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)</li>
+              <i class="fa-li fa fa-check"></i>
+             Fotografieren</li>
             <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              2<sup>nd</sup>
-              Place - University of Colorado Boulder - Emerging Tech Competition 2008</li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              1<sup>st</sup>
-              Place - James Buchanan High School - Hackathon 2006</li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              3<sup>rd</sup>
-              Place - James Buchanan High School - Hackathon 2005</li>
+              <i class="fa-li fa fa-check"></i>
+              Lesen</li>
           </ul>
         </div>
       </section>
