--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
             <!--</li>-->
           </ul>
 
-          <div class="subheading mb-3">Kenntnisse</div>
+          <div class="subheading mb-3">Kenntnisse & Tools</div>
           <ul class="fa-ul mb-0">
             <li>
               <i class="fa-li fa fa-check"></i>
@@ -233,11 +233,19 @@
               Usability Testing</li>
             <li>
               <i class="fa-li fa fa-check"></i>
+             Projektmanagement</li>
+            <li>
+              <i class="fa-li fa fa-check"></i>
+              Public Relations</li>
+            <li>
+              <i class="fa-li fa fa-check"></i>
               MySQL</li>
             <li>
               <i class="fa-li fa fa-check"></i>
               Adobe Programme (InDesign, Photoshop, Illustrator)</li>
             <li>
+              <i class="fa-li fa fa-check"></i>
+              Microsoft Office</li>
           </ul>
 <br>
           <div class="subheading mb-3">Kurse & Diplome</div>
