--- a/index.html
+++ b/index.html
@@ -272,16 +272,16 @@
 
           <ul class="fa-ul mb-0">
             <li>
-              <i class="fa-li fa fa-check"></i>
+              <i class="fa-li fa fa-globe-americas"></i>
               Deutsch: Muttersprache</li>
             <li>
-              <i class="fa-li fa fa-check"></i>
+              <i class="fa-li fa fa-globe-americas"></i>
               Englisch: konversationssicher</li>
             <li>
-              <i class="fa-li fa fa-check"></i>
+              <i class="fa-li fa fa-globe-americas"></i>
               Französisch: Grundkenntnisse</li>
             <li>
-              <i class="fa-li fa fa-check"></i>
+              <i class="fa-li fa fa-globe-americas"></i>
               Italienisch: Grundkenntnisse</li>
           </ul>
         </div>
@@ -294,19 +294,19 @@
           <h2 class="mb-5">Interessen</h2>
           <ul class="fa-ul mb-0">
             <li>
-              <i class="fa-li fa fa-check"></i>
+              <i class="fa-li fa fa-smile-beam"></i>
               Volleyball</li>
             <li>
-              <i class="fa-li fa fa-check"></i>
+              <i class="fa-li fa fa-smile-beam"></i>
              Pole Fitness</li>
             <li>
-              <i class="fa-li fa fa-check"></i>
+              <i class="fa-li fa fa-smile-beam"></i>
               Wintersport</li>
             <li>
-              <i class="fa-li fa fa-check"></i>
+              <i class="fa-li fa fa-smile-beam"></i>
              Fotografieren</li>
             <li>
-              <i class="fa-li fa fa-check"></i>
+              <i class="fa-li fa fa-smile-beam"></i>
               Lesen</li>
           </ul>
         </div>
