--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#interests">Interessen</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a>
+          </li>
         </ul>
       </div>
     </nav>
@@ -98,7 +101,23 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Projektassistentin 60%</h3>
               <div class="subheading mb-3">Migros-Genossenschafts-Bund Zürich</div>
-              <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+              <ul class="fa-ul mb-0">
+                <li>
+                  <i class="fa-li fa fa-check"></i>
+                  Mitarbeit beim Umsetzen eines internen Schulungsprojektes</li>
+                <li>
+                  <i class="fa-li fa fa-check"></i>
+                  Mitarbeit bei der Weiterentwicklung einer internen Projektleiter Community</li>
+                <li>
+                  <i class="fa-li fa fa-check"></i>
+                  Aufbau Projektarbeitsplattform in Confluence</li>
+                <li>
+                  <i class="fa-li fa fa-check"></i>
+                  Status-Reporting</li>
+                <li>
+                  <i class="fa-li fa fa-check"></i>
+                  Unterstützung der Projektleitung</li>
+              </ul>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">April 2018 - November 2018</span>
@@ -109,7 +128,17 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Kaufmännische Mitarbeiterin 40%</h3>
               <div class="subheading mb-3">Bürokonzept Schaller AG, Lenzburg</div>
-              <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+              <ul class="fa-ul mb-0">
+                <li>
+                  <i class="fa-li fa fa-check"></i>
+                  Unterstützung der Geschäftsleitung</li>
+                <li>
+                  <i class="fa-li fa fa-check"></i>
+                  Unterstützung des IT-Verantwortlichen</li>
+                <li>
+                  <i class="fa-li fa fa-check"></i>
+                  Administrative Aufgaben</li>
+              </ul>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">März 2015 - März 2018</span>
@@ -120,7 +149,23 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Kaufmännische Mitarbeiterin Unternehmenskommunikation 100%</h3>
               <div class="subheading mb-3">Asana Gruppe AG Spital Menziken</div>
-              <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
+              <ul class="fa-ul mb-0">
+                <li>
+                  <i class="fa-li fa fa-check"></i>
+                  Bewirtschaftung der Webseite (TYPO3)</li>
+                <li>
+                  <i class="fa-li fa fa-check"></i>
+                  Organisation und Koordination des Jahresberichts</li>
+                <li>
+                  <i class="fa-li fa fa-check"></i>
+                  Mitarbeit bei Projekten</li>
+                <li>
+                  <i class="fa-li fa fa-check"></i>
+                  Gestaltung und Verwaltung von Flyern und Formularen</li>
+                <li>
+                  <i class="fa-li fa fa-check"></i>
+                  Betreuung von KV-Lernenden</li>
+              </ul>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">August 2012 - Januar 2015</span>
@@ -312,7 +357,35 @@
         </div>
       </section>
 
-    </div>
+
+      <section class="resume-section p-3 p-lg-5 d-flex d-column" id="portfolio">
+        <div class="my-auto">
+          <h1 class="mb-0">Mein
+            <span class="text-primary">Portfolio</span>
+          </h1>
+          <div class="subheading mb-5">Fährstrasse 40· 4632 Trimbach · 079 690 93 79 ·
+            <a href="mailto:irina_terribilini@hotmail.com">irina_terribilini@hotmail.com</a>
+          </div>
+          <p class="lead mb-5">
+
+            <il>Geboren: 3.8.1993</il><br>
+            <il>Heimatort: Vergeletto TI</il><br>
+            <il>Nationalität: Schweizerin</il><br>
+            <il>Familienstand: ledig</il>
+
+          </p>
+          <div class="social-icons">
+            <a href="https://www.linkedin.com/in/irina-terribilini-723419123/">
+              <i class="fab fa-linkedin-in"></i>
+            </a>
+            <a href="https://join.skype.com/invite/guseX6EsrXr5">
+              <i class="fab fa-skype"></i>
+            </a>
+          </div>
+        </div>
+      </section>
+
+      </div>
 
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
