--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <a class="nav-link js-scroll-trigger" href="#about">Persönliche Daten</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#experience">Beruflicher Werdegang</a>
+            <a class="nav-link js-scroll-trigger" href="#experience">Berufserfahrung</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#education">Ausbildung</a>
@@ -95,7 +95,7 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="experience">
         <div class="my-auto">
-          <h2 class="mb-5">Beruflicher Werdegang</h2>
+          <h2 class="mb-5">Berufserfahrung</h2>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
