--- a/index.html
+++ b/index.html
@@ -357,8 +357,9 @@
         </div>
       </section>
 
+      <hr class="m-0">
 
-      <section class="resume-section p-3 p-lg-5 d-flex d-column" id="portfolio">
+      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="portfolio">
         <div class="my-auto">
           <h1 class="mb-0">Mein
             <span class="text-primary">Portfolio</span>
