--- a/index.html
+++ b/index.html
@@ -367,14 +367,17 @@
           <div class="subheading mb-5">Fährstrasse 40· 4632 Trimbach · 079 690 93 79 ·
             <a href="mailto:irina_terribilini@hotmail.com">irina_terribilini@hotmail.com</a>
           </div>
-          <p class="lead mb-5">
-
-            <il>Geboren: 3.8.1993</il><br>
-            <il>Heimatort: Vergeletto TI</il><br>
-            <il>Nationalität: Schweizerin</il><br>
-            <il>Familienstand: ledig</il>
-
-          </p>
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Cookiecaster 2.0</h3>
+              <div class="subheading mb-3">Hochschule für Technik FHNW Brugg-Windisch</div>
+              <div>Bachelor of Science FHNW in Informatik mit Vertiefung in Design und Management</div>
+              <a href="https://www.fhnw.ch/de/studium/technik/icompetence">Zur Webseite der FHNW</a>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">September 2014 - September 2018</span>
+            </div>
+          </div>
           <div class="social-icons">
             <a href="https://www.linkedin.com/in/irina-terribilini-723419123/">
               <i class="fab fa-linkedin-in"></i>
