--- a/index.html
+++ b/index.html
@@ -186,7 +186,8 @@
               <h3 class="mb-0">BSc Informatik - Profilierung iCompetence</h3>
               <div class="subheading mb-3">Hochschule für Technik FHNW Brugg-Windisch</div>
               <div>Bachelor of Science FHNW in Informatik mit Vertiefung in Design und Management</div>
-              <a href="https://www.fhnw.ch/de/studium/technik/icompetence">Zur Webseite der FHNW</a>
+              <br>
+              <a href="https://www.fhnw.ch/de/studium/technik/icompetence">Zur Webseite der FHNW ⟶</a>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">September 2014 - September 2018</span>
@@ -364,27 +365,36 @@
           <h1 class="mb-0">Mein
             <span class="text-primary">Portfolio</span>
           </h1>
-          <div class="subheading mb-5">Fährstrasse 40· 4632 Trimbach · 079 690 93 79 ·
-            <a href="mailto:irina_terribilini@hotmail.com">irina_terribilini@hotmail.com</a>
+          <div class="subheading mb-5">Hier stelle ich einige meiner Projektarbeiten vor.
           </div>
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Cookiecaster 2.0</h3>
-              <div class="subheading mb-3">Hochschule für Technik FHNW Brugg-Windisch</div>
-              <div>Bachelor of Science FHNW in Informatik mit Vertiefung in Design und Management</div>
-              <a href="https://www.fhnw.ch/de/studium/technik/icompetence">Zur Webseite der FHNW</a>
+              <div class="subheading mb-3">Bachelorarbeit · 2er Team</div>
+              <div>
+                <b>Auftrag</b><br>
+                Für das Maker Studio an der Fachhochschule Nordwestschweiz (FHNW) soll eine
+                Webapplikation entwickelt werden, auf der Ausstechformen/Keksformen gezeichnet
+                und verändert werden können. Die kreierten Ausstechformen werden schlussendlich auf
+                dem 3D-Drucker ausgedruckt.
+                Der „Cookiecaster 2.0“ soll im FHNW Maker Studio an den „Guetzliförmli-Kursen“ zum Einsatz kommen.
+              </div>
+              <br>
+            <div>
+              <b>Herausforderung</b><br>
+              Die Webapplikation muss intuitiv zu bedienen sein, da sie von Jung und Alt benutzt wird.
+              Der „Cookiecaster 2.0“ validiert und analysiert zudem die Formen vor dem Druck, um zu prüfen,
+              ob sie druckbar und für‘s Backen geeignet sind.
             </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">September 2014 - September 2018</span>
-            </div>
+              <br>
+              <div>
+                <b>Umsetzung</b><br>
+                Anforderungsanalyse, Personas, Prototyping, Usability-Testing.
+              </div>
           </div>
-          <div class="social-icons">
-            <a href="https://www.linkedin.com/in/irina-terribilini-723419123/">
-              <i class="fab fa-linkedin-in"></i>
-            </a>
-            <a href="https://join.skype.com/invite/guseX6EsrXr5">
-              <i class="fab fa-skype"></i>
-            </a>
+            <div class="resume-date text-md-right">
+              <span class="text-primary"><a href="http://86.119.39.190:3000/">Zum Prototyp ⟶</a></span>
+            </div>
           </div>
         </div>
       </section>
