--- a/index.html
+++ b/index.html
@@ -137,7 +137,22 @@
                   Unterstützung des IT-Verantwortlichen</li>
                 <li>
                   <i class="fa-li fa fa-check"></i>
-                  Administrative Aufgaben</li>
+                  Aufnehmen, verarbeiten und überwachen von mündlichen und schriftlichen Kundenaufträgen</li>
+                <li>
+                  <i class="fa-li fa fa-check"></i>
+                  Erstellen und Pflegen der Jahresstatistiken für Kunden</li>
+                <li>
+                  <i class="fa-li fa fa-check"></i>
+                  Abrechnen der Kundenverträge</li>
+                <li>
+                  <i class="fa-li fa fa-check"></i>
+                  Vorbereitung und Versand von Newslettern</li>
+                <li>
+                  <i class="fa-li fa fa-check"></i>
+                  Allgemeine Korrespondenz und Bedienung der Telefonanlage</li>
+                <li>
+                  <i class="fa-li fa fa-check"></i>
+                  Rechnungskontrolle</li>
               </ul>
             </div>
             <div class="resume-date text-md-right">
@@ -152,19 +167,34 @@
               <ul class="fa-ul mb-0">
                 <li>
                   <i class="fa-li fa fa-check"></i>
-                  Bewirtschaftung der Webseite (TYPO3)</li>
-                <li>
-                  <i class="fa-li fa fa-check"></i>
-                  Organisation und Koordination des Jahresberichts</li>
-                <li>
-                  <i class="fa-li fa fa-check"></i>
-                  Mitarbeit bei Projekten</li>
-                <li>
-                  <i class="fa-li fa fa-check"></i>
-                  Gestaltung und Verwaltung von Flyern und Formularen</li>
-                <li>
-                  <i class="fa-li fa fa-check"></i>
                   Betreuung von KV-Lernenden</li>
+                <li>
+                  <i class="fa-li fa fa-check"></i>
+                  Betreuung und Bewirtschaftung der Webseite (TYPO3) sowie des Intranets (Webbuilder)</li>
+                <li>
+                  <i class="fa-li fa fa-check"></i>
+                  Mitarbeit bei Projekten (z.B. Neugestaltung CI/CD Asana Gruppe AG)</li>
+                <li>
+                  <i class="fa-li fa fa-check"></i>
+                  Organisation von internen und externen Anlässen (z.B. Personalanlässe, Gewerbeausstellung)</li>
+                <li>
+                  <i class="fa-li fa fa-check"></i>
+                  Organisation/Koordination des Geschäfts- und Jahresberichts</li>
+                <li>
+                  <i class="fa-li fa fa-check"></i>
+                  Redaktionelle Mitarbeit bei der monatlichen Mitarbeiterinformation</li>
+                <li>
+                  <i class="fa-li fa fa-check"></i>
+                  Betreuung der allgemeinen Emailadresse des Spitals</li>
+                <li>
+                  <i class="fa-li fa fa-check"></i>
+                  Gestaltung und Verwaltung von Flyern, Prospekten und hausinternen Formularen</li>
+                <li>
+                  <i class="fa-li fa fa-check"></i>
+                  Zusammenstellen von Präsentationen</li>
+                <li>
+                  <i class="fa-li fa fa-check"></i>
+                  Protokollführung bei Sitzungen</li>
               </ul>
             </div>
             <div class="resume-date text-md-right">
