--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
               <div class="subheading mb-3">Hochschule für Technik FHNW Brugg-Windisch</div>
               <div>Bachelor of Science FHNW in Informatik mit Vertiefung in Design und Management</div>
               <br>
-              <a href="https://www.fhnw.ch/de/studium/technik/icompetence">Zur Webseite der FHNW ⟶</a>
+              <a href="https://www.fhnw.ch/de/studium/technik/icompetence">Studiengang "iCompetence" an der FHNW ⟶</a>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">September 2014 - September 2018</span>
