--- a/index.html
+++ b/index.html
@@ -419,8 +419,13 @@
               <br>
               <div>
                 <b>Umsetzung</b><br>
-                Anforderungsanalyse, Personas, Prototyping, Usability-Testing.
+                  Anforderungsanalyse · Personas · Prototyping · Usability-Testing
               </div>
+                <br>
+                <div>
+                    <b>Tools</b><br>
+                    Figma · Marvel App
+                </div>
           </div>
             <div class="resume-date text-md-right">
               <span class="text-primary"><a href="http://86.119.39.190:3000/">Zum Prototyp ⟶</a></span>
