--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
                 </li>
                 <li>
                     <i class="fa-li fa fa-globe-americas"></i>
-                    Englisch: konversationssicher
+                    Englisch: Gute mündliche und schriftliche Kenntnisse
                 </li>
                 <li>
                     <i class="fa-li fa fa-globe-americas"></i>
