Ergänzung MGB Aufgaben

--- a/index.html
+++ b/index.html
@@ -108,11 +108,15 @@
                     <ul class="fa-ul mb-0">
                         <li>
                             <i class="fa-li fa fa-check"></i>
-                            Mitarbeit beim Umsetzen eines internen Schulungsprojektes
+                            Begleitung der Einführung einer neuen Projektmanagementumgebung für über 60 Projektleiter
                         </li>
                         <li>
                             <i class="fa-li fa fa-check"></i>
-                            Mitarbeit bei der Weiterentwicklung einer internen Projektleiter Community
+                            Mitarbeit bei der Erarbeitung und Umsetzung eines internen Schulungskonzeptes
+                        </li>
+                        <li>
+                            <i class="fa-li fa fa-check"></i>
+                        Führen des Projektmanagements und der Projektdokumentation
                         </li>
                         <li>
                             <i class="fa-li fa fa-check"></i>
@@ -120,11 +124,15 @@
                         </li>
                         <li>
                             <i class="fa-li fa fa-check"></i>
+                            Mitarbeit bei der Weiterentwicklung einer internen Projektleiter Community
+                        </li>
+                        <li>
+                            <i class="fa-li fa fa-check"></i>
                             Status-Reporting
                         </li>
                         <li>
                             <i class="fa-li fa fa-check"></i>
-                            Unterstützung der Projektleitung
+                            Mitarbeit im Projektoffice für weitere Projekte
                         </li>
                     </ul>
                 </div>
