--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                         </li>
                         <li>
                             <i class="fa-li fa fa-check"></i>
-                            Aufbau Projektarbeitsplattform in Confluence
+                            Aufbau der Projektarbeitsplattform in Confluence
                         </li>
                         <li>
                             <i class="fa-li fa fa-check"></i>
@@ -160,7 +160,7 @@
                         </li>
                         <li>
                             <i class="fa-li fa fa-check"></i>
-                            Erstellen und Pflegen der Jahresstatistiken für Kunden
+                            Erstellen und pflegen der Jahresstatistiken für Kunden
                         </li>
                         <li>
                             <i class="fa-li fa fa-check"></i>
