added more text to portfolio cookiecaster 2.0

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                         </li>
                         <li>
                             <i class="fa-li fa fa-check"></i>
-                            Abrechnen der Kundenverträge
+                            Abrechnung der Kundenverträge
                         </li>
                         <li>
                             <i class="fa-li fa fa-check"></i>
@@ -460,17 +460,16 @@
                     <div>
                         <b>Auftrag</b><br>
                         Für das Maker Studio an der Fachhochschule Nordwestschweiz (FHNW) soll eine
-                        Webapplikation entwickelt werden, auf der Ausstechformen/Keksformen gezeichnet
-                        und verändert werden können. Die kreierten Ausstechformen werden schlussendlich auf
-                        dem 3D-Drucker ausgedruckt.
-                        Der „Cookiecaster 2.0“ soll im FHNW Maker Studio an den „Guetzliförmli-Kursen“ zum Einsatz
-                        kommen.
+                        Webapplikation entwickelt werden. Damit möchte man an den „Guetzliförmli-Kursen“
+                        Ausstechformen/Keksformen zeichnen und verändern können. Nach dem Export des generierten 3D-Modells
+                        und einem Zwischenschritt in der sogenannten Slicer Software muss es möglich sein, die Ausstechform
+                        am 3D-Drucker auszudrucken.
                     </div>
                     <br>
                     <div>
                         <b>Herausforderung</b><br>
                         Die Webapplikation muss intuitiv zu bedienen sein, da sie von Jung und Alt benutzt wird.
-                        Der „Cookiecaster 2.0“ validiert und analysiert zudem die Formen vor dem Druck, um zu prüfen,
+                        Der Cookiecaster 2.0 validiert und analysiert zudem die Formen vor dem Druck, um zu prüfen,
                         ob sie druckbar und für‘s Backen geeignet sind.
                     </div>
                     <br>
@@ -482,6 +481,13 @@
                     <div>
                         <b>Tools</b><br>
                         Figma · Marvel App
+                    </div>
+                    <br>
+                    <div>
+                        <b>Resultat</b><br>
+                        Der Cookiecaster 2.0 validiert die vom Benutzer gezeichnete Form auf mögliche Überschneidungen und verhindert,
+                        wenn nötig, den Export. Der Benutzer bekommt des Weiteren ein Feedback, wenn es Punkte gibt, die beim Backen
+                        ungeeignet erscheinen (z.B. zu Spitze Winkel).
                     </div>
                 </div>
                 <div class="resume-date text-md-right">
