--- a/index.html
+++ b/index.html
@@ -519,6 +519,11 @@
                         <b>Tools</b><br>
                         Figma · Marvel App · Tobii Eye Tracker
                     </div>
+                    <br>
+                    <div>
+                        <b>Resultat</b><br>
+                        Text
+                    </div>
                 </div>
                 <div class="resume-date text-md-right">
                     <span class="text-primary"><a href="https://marvelapp.com/47b91jj/screen/35684102">Zum Prototyp ⟶</a></span>
@@ -544,14 +549,14 @@
                     </div>
                     <br>
                     <div>
-                        <b>Resultat</b><br>
-                        Es entstand die Idee einer Applikation auf der Benutzer ihren Foodwaste tracken
-                        und den Verlauf sowie ihren persönlichen Fortschritt über mehrere Wochen abrufen können.
+                        <b>Tools</b><br>
+                        Figma · Marvel App · Tobii Eye Tracker
                     </div>
                     <br>
                     <div>
-                        <b>Tools</b><br>
-                        Figma · Marvel App · Tobii Eye Tracker
+                        <b>Resultat</b><br>
+                        Es entstand die Idee einer Applikation auf der Benutzer ihren Foodwaste tracken
+                        und den Verlauf sowie ihren persönlichen Fortschritt über mehrere Wochen abrufen können.
                     </div>
                 </div>
                 <div class="resume-date text-md-right">
