added some text resultat bei arthaios

--- a/index.html
+++ b/index.html
@@ -507,7 +507,8 @@
                     <div>
                         <b>Herausforderung</b><br>
                         Das Konzept für den Webauftritt der Arthaios AG muss von Grund auf neu aufgezogen werden.
-                        Die unterschiedlichen Benutzergruppen liegen dabei im Fokus.
+                        Dabei soll das bestehende CI der Frima berücksichtigt werden.
+                        Die unterschiedlichen Benutzergruppen liegen bei der Entwicklung im Fokus.
                     </div>
                     <br>
                     <div>
@@ -522,7 +523,7 @@
                     <br>
                     <div>
                         <b>Resultat</b><br>
-                        Text
+                        Das entwickelte UX/UI-Konzept kann als Vorlage für eine Umsetzung der Webseite hinzugezogen werden.
                     </div>
                 </div>
                 <div class="resume-date text-md-right">
