--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
                 <!--</li>-->
             </ul>
 
-            <div class="subheading mb-3">Kenntnisse & Tools</div>
+            <div class="subheading mb-3">Kenntnisse</div>
             <ul class="fa-ul mb-0">
                 <li>
                     <i class="fa-li fa fa-check"></i>
@@ -356,12 +356,32 @@
                 </li>
                 <li>
                     <i class="fa-li fa fa-check"></i>
+                    Requirements Engineering
+                </li>
+                <li>
+                    <i class="fa-li fa fa-check"></i>
                     MySQL
                 </li>
+            </ul>
+            <br>
+                <div class="subheading mb-3">Tools</div>
+                <ul class="fa-ul mb-0">
                 <li>
                     <i class="fa-li fa fa-check"></i>
                     Adobe Programme (InDesign, Photoshop, Illustrator)
                 </li>
+                <li>
+                    <i class="fa-li fa fa-check"></i>
+                    Balsamiq
+                </li>
+                    <li>
+                        <i class="fa-li fa fa-check"></i>
+                    Figma
+                    </li>
+                    <li>
+                        <i class="fa-li fa fa-check"></i>
+                        MarvelApp
+                    </li>
                 <li>
                     <i class="fa-li fa fa-check"></i>
                     Microsoft Office
