--- a/index.html
+++ b/index.html
@@ -344,6 +344,10 @@
                 </li>
                 <li>
                     <i class="fa-li fa fa-check"></i>
+                    Story Mapping
+                </li>
+                <li>
+                    <i class="fa-li fa fa-check"></i>
                     Usability Testing
                 </li>
                 <li>
@@ -381,6 +385,10 @@
                     <li>
                         <i class="fa-li fa fa-check"></i>
                         MarvelApp
+                    </li>
+                    <li>
+                        <i class="fa-li fa fa-check"></i>
+                        Loockback
                     </li>
                 <li>
                     <i class="fa-li fa fa-check"></i>
