--- a/index.html
+++ b/index.html
@@ -384,11 +384,11 @@
                     </li>
                     <li>
                         <i class="fa-li fa fa-check"></i>
-                        MarvelApp
+                        Marvel App
                     </li>
                     <li>
                         <i class="fa-li fa fa-check"></i>
-                        Loockback
+                        Loockbackg
                     </li>
                 <li>
                     <i class="fa-li fa fa-check"></i>
