--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
                 </li>
                 <li>
                     <i class="fa-li fa fa-check"></i>
-                    MySQL
+                    MySQL (Theorie)
                 </li>
             </ul>
             <br>
@@ -388,7 +388,7 @@
                     </li>
                     <li>
                         <i class="fa-li fa fa-check"></i>
-                        Loockbackg
+                        Loockback
                     </li>
                 <li>
                     <i class="fa-li fa fa-check"></i>
