reformate code and skills

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                         </li>
                         <li>
                             <i class="fa-li fa fa-check"></i>
-                        Führen des Projektmanagements und der Projektdokumentation
+                            Führen des Projektmanagements und der Projektdokumentation
                         </li>
                         <li>
                             <i class="fa-li fa fa-check"></i>
@@ -303,9 +303,9 @@
                 <!--<li class="list-inline-item">-->
                 <!--<i class="fab fa-angular"></i>-->
                 <!--</li>-->
-                <li class="list-inline-item">
-                    <i class="fab fa-react"></i>
-                </li>
+                <!--<li class="list-inline-item">-->
+                <!--<i class="fab fa-react"></i>-->
+                <!--</li>-->
                 <li class="list-inline-item">
                     <i class="fab fa-java"></i>
                 </li>
@@ -331,8 +331,23 @@
                 <!--<i class="fab fa-npm"></i>-->
                 <!--</li>-->
             </ul>
-
-            <div class="subheading mb-3">Kenntnisse</div>
+            <div class="subheading mb-3">Frameworks & Libraries</div>
+            <ul class="fa-ul mb-0">
+                <li>
+                    <i class="fa-li fa fa-check"></i>
+                    React
+                </li>
+                <li>
+                    <i class="fa-li fa fa-check"></i>
+                    Bootstrap
+                </li>
+                <li>
+                    <i class="fa-li fa fa-check"></i>
+                    Materialize
+                </li>
+            </ul>
+            <br>
+            <div class="subheading mb-3">Weitere Kenntnisse</div>
             <ul class="fa-ul mb-0">
                 <li>
                     <i class="fa-li fa fa-check"></i>
@@ -368,28 +383,28 @@
                 </li>
             </ul>
             <br>
-                <div class="subheading mb-3">Tools</div>
-                <ul class="fa-ul mb-0">
+            <div class="subheading mb-3">Tools</div>
+            <ul class="fa-ul mb-0">
                 <li>
                     <i class="fa-li fa fa-check"></i>
                     Adobe Programme (InDesign, Photoshop, Illustrator)
                 </li>
                 <li>
                     <i class="fa-li fa fa-check"></i>
+                    Figma
+                </li>
+                <li>
+                    <i class="fa-li fa fa-check"></i>
                     Balsamiq
                 </li>
-                    <li>
-                        <i class="fa-li fa fa-check"></i>
-                    Figma
-                    </li>
-                    <li>
-                        <i class="fa-li fa fa-check"></i>
-                        Marvel App
-                    </li>
-                    <li>
-                        <i class="fa-li fa fa-check"></i>
-                        Loockback
-                    </li>
+                <li>
+                    <i class="fa-li fa fa-check"></i>
+                    Marvel App
+                </li>
+                <li>
+                    <i class="fa-li fa fa-check"></i>
+                    Loockback
+                </li>
                 <li>
                     <i class="fa-li fa fa-check"></i>
                     Microsoft Office
@@ -489,8 +504,10 @@
                         <b>Auftrag</b><br>
                         Für das Maker Studio an der Fachhochschule Nordwestschweiz (FHNW) soll eine
                         Webapplikation entwickelt werden. Damit möchte man an den „Guetzliförmli-Kursen“
-                        Ausstechformen/Keksformen zeichnen und verändern können. Nach dem Export des generierten 3D-Modells
-                        und einem Zwischenschritt in der sogenannten Slicer Software muss es möglich sein, die Ausstechform
+                        Ausstechformen/Keksformen zeichnen und verändern können. Nach dem Export des generierten
+                        3D-Modells
+                        und einem Zwischenschritt in der sogenannten Slicer Software muss es möglich sein, die
+                        Ausstechform
                         am 3D-Drucker auszudrucken.
                     </div>
                     <br>
@@ -513,8 +530,10 @@
                     <br>
                     <div>
                         <b>Resultat</b><br>
-                        Der Cookiecaster 2.0 validiert die vom Benutzer gezeichnete Form auf mögliche Überschneidungen und verhindert,
-                        wenn nötig, den Export. Der Benutzer bekommt des Weiteren ein Feedback, wenn es Punkte gibt, die beim Backen
+                        Der Cookiecaster 2.0 validiert die vom Benutzer gezeichnete Form auf mögliche Überschneidungen
+                        und verhindert,
+                        wenn nötig, den Export. Der Benutzer bekommt des Weiteren ein Feedback, wenn es Punkte gibt, die
+                        beim Backen
                         ungeeignet erscheinen (z.B. zu Spitze Winkel).
                     </div>
                 </div>
@@ -551,11 +570,13 @@
                     <br>
                     <div>
                         <b>Resultat</b><br>
-                        Das entwickelte UX/UI-Konzept kann als Vorlage für eine Umsetzung der Webseite hinzugezogen werden.
+                        Das entwickelte UX/UI-Konzept kann als Vorlage für eine Umsetzung der Webseite hinzugezogen
+                        werden.
                     </div>
                 </div>
                 <div class="resume-date text-md-right">
-                    <span class="text-primary"><a href="https://marvelapp.com/47b91jj/screen/35684102">Zum Prototyp ⟶</a></span>
+                    <span class="text-primary"><a
+                            href="https://marvelapp.com/47b91jj/screen/35684102">Zum Prototyp ⟶</a></span>
                 </div>
             </div>
             <div class="resume-item d-flex flex-column flex-md-row mb-5">
@@ -564,7 +585,8 @@
                     <div class="subheading mb-3">Projektarbeit · 4er Team</div>
                     <div>
                         <b>Auftrag</b><br>
-                        Es soll eine Idee, ein Konzept sowie ein klickbarer Prototyp für eine neue Applikation entwickelt werden.
+                        Es soll eine Idee, ein Konzept sowie ein klickbarer Prototyp für eine neue Applikation
+                        entwickelt werden.
                     </div>
                     <br>
                     <div>
