--- a/index.html
+++ b/index.html
@@ -369,6 +369,10 @@
                 </li>
                 <li>
                     <i class="fa-li fa fa-check"></i>
+                    Vorgehensmodelle (Scrum, Wasserfall, RUP)
+                </li>
+                <li>
+                    <i class="fa-li fa fa-check"></i>
                     Public Relations
                 </li>
                 <li>
