--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
                 </li>
                 <li>
                     <i class="fa-li fa fa-check"></i>
-                    Loockback
+                    Lookback
                 </li>
                 <li>
                     <i class="fa-li fa fa-check"></i>
