--- a/index.html
+++ b/index.html
@@ -333,6 +333,10 @@
             <ul class="fa-ul mb-0">
                 <li>
                     <i class="fa-li fa fa-check"></i>
+                    JavaFX
+                </li>
+                <li>
+                    <i class="fa-li fa fa-check"></i>
                     Bootstrap
                 </li>
                 <li>
