--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
                 </li>
             </ul>
             <br>
-            <div class="subheading mb-3">Zertifikate und Kurse</div>
+            <div class="subheading mb-3">Zertifikate & Kurse</div>
             <ul class="fa-ul mb-0">
                 <li>
                     <i class="fa-li fa fa-check"></i>
