--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
 
             <div class="resume-item d-flex flex-column flex-md-row mb-5">
                 <div class="resume-content mr-auto">
-                    <h3 class="mb-0">Projektassistentin 60%</h3>
-                    <div class="subheading mb-3">Migros-Genossenschafts-Bund, Zürich</div>
+                    <h3 class="mb-0">Projektassistentin IT-Projektmanagement 60%</h3>
+                    <div class="subheading mb-3">Migros-Genossenschafts-Bund, Zürich | Migros IT-Services</div>
                     <ul class="fa-ul mb-0">
                         <li>
                             <i class="fa-li fa fa-check"></i>
