technologien portfolio cookiecaster

--- a/index.html
+++ b/index.html
@@ -530,8 +530,8 @@
                     </div>
                     <br>
                     <div>
-                        <b>Tools</b><br>
-                        Figma · Marvel App
+                        <b>Tools & Technologien</b><br>
+                        Figma · Marvel App · React-Bootstrap · D3.js · MongoDB
                     </div>
                     <br>
                     <div>
